Fix text overflow on ingredient buttons

--- a/pages/project_common.css
+++ b/pages/project_common.css
@@ -47,6 +47,8 @@ body {
     margin: 0;
     font-size: 10px;
     text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .selected_ingredient_button {
     background: lightgray;
